# ships

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
bak/: Game.cpp  Game.hpp  GameGui.cpp  GameGui.hpp
bak/GuiStates/: AttackingShipsState.cpp  CreateFieldState.cpp  CreateShipsState.cpp  MenuState.cpp  PlacingShipsState.cpp  SaveLoadState.cpp
diagrams/: CliInterface.puml  Game.puml  Ship.puml  ShipField.puml  ShipManager.puml  lb1.puml  lb2.puml  lb3.puml  main.puml  test.uxf
include/: AiPlayer.hpp  Enums.hpp  Exceptions.hpp  Game.hpp  GameController.hpp  GameGui.hpp  GameRenderer.hpp  GameState.hpp  Input.hpp  InputCommands.hpp  Player.hpp  Ship.hpp  ShipField.hpp  ShipManager.hpp  TerminalInput.hpp
include/Abilities/: Ability.hpp  AbilityManager.hpp  AbilityResults.hpp  AbilityType.hpp  BombardAbility.hpp  DoubleDamageAbility.hpp  ScannerAbility.hpp
include/Exceptions/: BaseException.hpp  Exceptions.hpp  NoAbilitiesException.hpp  OutOfBoundsException.hpp  PlaceShipOutOfBoundsException.hpp  ShipCollisionException.hpp  ShipPlacementException.hpp
include/Graphics/: AttackingShipsState.hpp  CreateFieldState.hpp  MenuState.hpp  PlacingShipsState.hpp  state.hpp
include/GuiStates/: AttackingShipsState.hpp  CreateFieldState.hpp  CreateShipsState.hpp  GameStates.hpp  MenuState.hpp  PlacingShipsState.hpp  SaveLoadState.hpp  State.hpp
modules/: Ship.cpp  Ship.hpp  ShipField.cpp  ShipField.hpp  ShipManager.cpp  ShipManager.hpp
src/: AiPlayer.cpp  Game.cpp  GameGui.cpp  GameState.cpp  Input.cpp  Player.cpp  Ship.cpp  ShipField.cpp  ShipManager.cpp  TerminalInput.cpp  main.cpp
src/Abilities/: AbilityManager.cpp  BombardAbility.cpp  DoubleDamageAbility.cpp  ScannerAbility.cpp
src/Graphics/: AttackingShipsState.cpp  CreateFieldState.cpp  MenuState.cpp  PlacingShipsState.cpp
src/GuiStates/: AttackingShipsState.cpp  CreateFieldState.cpp  CreateShipsState.cpp  MenuState.cpp  PlacingShipsState.cpp  SaveLoadState.cpp
src/modules/: Cli.cpp  Cli.hpp  CliInterface.cpp  CliInterface.hpp  Enums.hpp  Game.cpp  Game.hpp  Ship.cpp  Ship.hpp  ShipField.cpp  ShipField.hpp  ShipManager.cpp  ShipManager.hpp
